# devops

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  devops-definition.yaml  go.mod  go.sum  justfile  main.go  mkdocs.yml  pyproject.toml  specs.json
.github/actions/setup-workspace/: action.yaml
.github/release/: v0.0.1.md  v0.0.2.md  v0.0.3.md  v0.0.4.md
.github/workflows/: cicd.yaml  docs.yaml  integration-test.yaml  pre-commit.yaml  release.yaml
backend/: __init__.py  service.py
backend/core/config/: env.py  models.py
backend/core/obs/: logging.py
backend/core/utils/: __init__.py  types.py
cli/buildinfo/: buildinfo.go  buildinfo_test.go
cli/config/: build.go  buildinfo.go  buildinfo_test.go  context.go  context_test.go  models.go  models_test.go  utils.go  utils_test.go
cli/config/resources/: test.yaml
cli/core/: commands.go  commands_test.go  mocks.go  registry.go
cli/executor/: executor_test.go
docs/: index.md  project-definition-schema.yaml  requirements.md
docs/cli/: devops.md
integration/: Dockerfile  docker-compose.yaml  justfile
internal/environment/: environment.go  environment_test.go
internal/fileutils/: context.go  copy.go  copy_test.go  tar.go
shared-actions/create-release/: action.yaml
shared-actions/install-uv/: action.yaml
tests/: test_config.py
