[project]
name = "devops-api"
version = "0.0.1"
description = "Backend service "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.3",
    "pydantic>=2.12.0",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pylint>=3.3.9",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-repeat>=0.9.4",
]
